# jiji-activities

./: .gitignore  CLAUDE.md  Cargo.toml  README.md
.github/workflows/: ci.yml
docs/: design.md
src/: assign_workspace.rs  cli.rs  completions.rs  create.rs  error.rs  follow.rs  ipc.rs  ipc_helpers.rs  list.rs  main.rs  move_window.rs  move_workspace.rs  picker.rs  remove.rs  rename.rs  save.rs  switch.rs  switch_previous.rs
src/picker/: mod.rs  multi_select.rs  single_select.rs
tests/: cli.rs  picker_shim.rs  rofi_shim.rs  smoke.rs
