[package]
name = "niri-activities"
version = "0.1.0"
description = "KDE-style Activities for the niri wayland compositor (CLI)"
authors = ["Petr Gajdůšek"]
license = "GPL-3.0-or-later"
edition = "2024"
publish = false

[[bin]]
name = "niri-activities"
path = "src/main.rs"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
clap_complete = "4.6"
# Aligned with niri's own resolution (`niri/gajdusek/Cargo.toml`).
directories = "6"
# `v1` feature pins the KDL v1 spec — niri's `knuffel` 3.2.0 parses KDL v1;
# the default kdl-rs v6 dialect (KDL v2) would mismatch existing configs.
kdl = { version = "6", features = ["v1"] }
# Local path to the gajdusek niri fork's `feature/activities` branch.
# Tracked rev (informational): 54aee6582cbfc11b4e69fa8a602cf2653e29df4a
# Once the branch is pushed to GitHub, switch to:
#   niri-ipc = { git = "https://github.com/gajdusek/niri", rev = "<sha>" }
# Pin the rev rather than the branch so IPC bumps are deliberate.
niri-ipc = { path = "../../niri/niri/gajdusek/niri-ipc" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
tempfile = "3"
