[package]
name = "jiji-activities"
version = "0.1.0"
description = "KDE-style Activities for the jiji wayland compositor (CLI) — hard-fork of niri"
authors = ["Petr Gajdůšek"]
license = "GPL-3.0-or-later"
repository = "https://github.com/jiji-wm/jiji-activities"
edition = "2024"
publish = false

[[bin]]
name = "jiji-activities"
path = "src/main.rs"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
clap_complete = "4.6"
# Aligned with the jiji compositor's own resolution (`jiji/Cargo.toml`).
directories = "6"
# `v1` feature pins the KDL v1 spec — the jiji compositor's `knuffel` 3.2.0
# parses KDL v1; the default kdl-rs v6 dialect (KDL v2) would mismatch
# existing configs.
kdl = { version = "6", features = ["v1"] }
# Local path to the jiji compositor's IPC crate. The compositor source rename
# has landed: the crate is now `jiji-ipc`, so we bridge via `package` to keep
# the `niri_ipc` source identifier until the in-repo rename to `jiji_ipc`.
# Once the branch is pushed to GitHub (jiji-wm/jiji), switch to:
#   niri-ipc = { package = "jiji-ipc", git = "https://github.com/jiji-wm/jiji", rev = "<sha>" }
# Pin the rev rather than the branch so IPC bumps are deliberate.
niri-ipc = { package = "jiji-ipc", path = "../jiji/jiji-ipc" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
tempfile = "3"
